# odinring

./: .deployment-urls  .firebaserc  .gitignore  ACCESSIBILITY_WARNINGS_FIXED.md  ACTION_PLAN_100_PERCENT_GREEN.md  AI_ENDPOINTS_COMPLETE.md  AI_ENDPOINTS_QUICK_REFERENCE.md  ALL_LINKS_FIXED_SUMMARY.md  ARCHITECTURE_ANALYSIS_SUMMARY.md  AUDIT_FIXES_APPLIED.md  AUTH_FIX_APPLIED.md  AUTH_FIX_COMPLETE.md  AUTH_FIX_COMPLETE_SUMMARY.md  AUTH_MODAL_FIXES.md  AUTH_TOKEN_FIX.md  BACKEND_ENV_VERIFICATION.md  BACKEND_RESTARTED.md  BACKUP_README.md  BRANDING_GUIDELINES.md  CHANGELOG.md  CHANGES_REVERTED.md  CHROME_ERROR_FIX.md  CLEAN_START_GUIDE.md  CODEBASE_ARCHITECTURE_ANALYSIS.md  COMPLETE_DEPLOYMENT_ROADMAP.md  COMPLETE_IMPLEMENTATION_REPORT.md  COMPLETE_TEST_IMPLEMENTATION_REPORT.md  COMPREHENSIVE_DIAGNOSTIC_REPORT.md  COMPREHENSIVE_DIAGNOSTIC_REPORT_20260106_214248.json  COMPREHENSIVE_DIAGNOSTIC_REPORT_20260106_214248.md  COMPREHENSIVE_DIAGNOSTIC_REPORT_20260106_214350.json  COMPREHENSIVE_DIAGNOSTIC_REPORT_20260106_214350.md  COMPREHENSIVE_DIAGNOSTIC_REPORT_20260106_220651.json  COMPREHENSIVE_DIAGNOSTIC_REPORT_20260106_220651.md  COMPREHENSIVE_DIAGNOSTIC_REPORT_20260106_220814.json  COMPREHENSIVE_DIAGNOSTIC_REPORT_20260106_220814.md  COMPREHENSIVE_DIAGNOSTIC_REPORT_20260106_220853.json  COMPREHENSIVE_DIAGNOSTIC_REPORT_20260106_220853.md  COMPREHENSIVE_DIAGNOSTIC_REPORT_20260106_221820.json  COMPREHENSIVE_DIAGNOSTIC_REPORT_20260106_221820.md  (+302 more)
backend/: .coverage  .coveragerc  .dockerignore  .pylintrc  Dockerfile  SECURITY_QUICK_REFERENCE.md  api_performance_test.py  audit_log_utils.py  authorization.py  cache_service.py  comprehensive_performance_report_20260102_203656.json  comprehensive_performance_report_20260102_203656.md  config.py  conftest.py  (+30 more)
(+366 files in other folders)
