[project]
name = "odinring-backend"
version = "1.0.0"
description = "OdinRing Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.110.1",
    "firebase-admin==7.1.0",
    "bcrypt==4.3.0",
    "PyJWT==2.10.1",
    "pydantic==2.11.7",
    "pydantic-settings==2.1.0",
    "email-validator==2.3.0",
    "python-dotenv==1.1.1",
    "python-multipart==0.0.12",
    "qrcode==8.0",
    "Pillow==10.4.0",
    "requests==2.32.3",
    "python-dateutil==2.9.0.post0",
    "slowapi==0.1.9",
    "sentry-sdk[fastapi]==1.40.0",
    "structlog==24.1.0",
    "stripe",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_context = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "firebase_admin.*",
    "firebase.*",
    "tests.*",
]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", "test_*.py", "*_test.py", "venv", ".venv", "node_modules"]
skips = ["B101", "B601"]  # Skip assert_used, shell_injection_subprocess

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "security: Security tests",
    "slow: Slow tests",
]


